--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,16 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+#generated output exclusions
+/log/
+/out/
+/doc/
+
+#IDE exclusions
+/nbproject/
+/.idea/
+/.vscode/
+
+#OS exclusions
+.DS_Store
