--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "bunyan-prettystream": "^0.1.3",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "jsdoc": "^3.3.2",
     "mocha": "^2.3.2",
     "node-mocks-http": "^1.5.0",
@@ -36,5 +39,14 @@
     "node": true,
     "jasmine": true,
     "esversion": 6
-  }
+  },
+  "eslintConfig": {
+    "parserOptions": {
+        "sourceType": "script"
+    },
+        "env": {
+            "node": true,
+            "jasmine": true
+        }
+    }
 }
