--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "solos",
+  "name": "rapid-solos",
   "version": "0.0.15",
-  "description": "Express.js-based RESTful API framework",
+  "description": "Express.js based RESTful framework",
   "main": "solos.js",
   "author": "Brilliancy Software a Three Pawns, Inc. Company",
   "license": "MIT",
   "homepage": "https://github.com/BrilliancySoftware/solos",
   "dependencies": {
-    "bunyan": "^1.5.1",
     "express": "^4.13.3",
     "express-authorization": "^1.0.0",
     "fs": "^0.0.2",
@@ -16,15 +15,13 @@
     "uuid": "^2.0.1"
   },
   "devDependencies": {
-    "bunyan-prettystream": "^0.1.3",
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
     "jsdoc": "^3.3.2",
     "mocha": "^2.3.2",
     "node-mocks-http": "^1.5.0",
-    "should": "^7.1.0",
-    "supertest": "^1.1.0"
+    "should": "^7.1.0"
   },
   "scripts": {
     "start": "node test/express.js",
@@ -42,11 +39,11 @@
   },
   "eslintConfig": {
     "parserOptions": {
-        "sourceType": "script"
+      "sourceType": "script"
     },
-        "env": {
-            "node": true,
-            "jasmine": true
-        }
+    "env": {
+      "node": true,
+      "jasmine": true
     }
+  }
 }
