Authentication makes sense now: 1) Removed express-authentication dependency 2) User can be part of many groups 3) Group permissions are configurable regular expressions 4) Override functionality unchanged

--- a/config.json
+++ b/config.json
@@ -3,6 +3,10 @@
     "path": "./test/resource"
   },
   "security": {
-    "allowIsTheDefault": true
+    "allowAll": false,
+    "groups": {
+      "admin": ["^(GET|POST)[^/]+[/]user[/][^ ]+$"],
+      "user": []
+    }
   }
 }
