--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
   "license": "MIT",
   "homepage": "https://github.com/CoderByBlood/solos",
   "dependencies": {
+    "@feathersjs/feathers": "^3.1.5",
+    "deified": "^0.2.1",
     "express": "^4.13.3",
     "fs": "^0.0.2",
-    "seneca": "^2.1.0",
-    "seneca-entity": "^1.3.0",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
+    "jest": "^22.4.3",
     "jsdoc": "^3.3.2",
-    "mocha": "^2.3.2",
-    "node-mocks-http": "^1.5.0",
-    "should": "^7.1.0"
+    "node-mocks-http": "^1.5.0"
   },
   "scripts": {
     "start": "node test/express.js",
-    "test": "make test",
+    "test": "jest --verbose --coverage",
     "jsdoc": "jsdoc  --configure ./jsdoc-conf.json"
   },
   "repository": {
