--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^2.0.1"
   },
   "devDependencies": {
+    "coveralls": "^3.0.1",
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
