--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "homepage": "https://github.com/CoderByBlood/solos",
   "dependencies": {
     "@feathersjs/feathers": "^3.1.5",
-    "deified": "^0.2.1",
+    "debug": "^3.1.0",
+    "deified": "^0.3.0",
     "express": "^4.13.3",
-    "fs": "^0.0.2",
+    "micromatch": "^3.1.10",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
