--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "license": "MIT",
   "homepage": "https://github.com/CoderByBlood/solos",
   "dependencies": {
-    "@feathersjs/express": "^1.2.2",
-    "@feathersjs/feathers": "^3.1.5",
-    "debug": "^3.1.0",
-    "deified": "^0.3.2"
+    "@feathersjs/express": "^1.3.1",
+    "@feathersjs/feathers": "^3.3.1",
+    "debug": "^3.2.6",
+    "globby": "^9.0.0"
   },
   "devDependencies": {
-    "coveralls": "^3.0.1",
-    "eslint": "^5.9.0",
+    "coveralls": "^3.0.2",
+    "eslint": "^5.13.0",
     "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.16.0",
     "jest": "^22.4.4",
     "jsdoc": "^3.3.2",
-    "supertest": "^3.1.0"
+    "supertest": "^3.4.2"
   },
   "scripts": {
     "start": "node test/express.js",
